5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4062/executions/1602_1015.log
== TEST (2019-03-28 00:07:31) 
-- CODE:
int(input(min(6,2,6) ))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:07:42) 
-- CODE:
int(input(min(6,2,9) ))
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 00:08:02) 
-- CODE:
int(input(min(6,2,9))
	 
-- EXECUTION TIME:
0.128975
-- ERROR:
  File "/home/codebench/codes/1602/1015/main.py", line 3
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 00:08:05) 
-- CODE:
int(input(min(6,2,9))
	 
-- ERROR:
File "XXXX", line 3
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:37:59) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " 
-- ERROR:
File "XXXX", line 2
    
                                            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:38:11) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " )
-- ERROR:
File "XXXX", line 2
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:38:19) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " ))
-- ERROR:
File "XXXX", line 2
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:39:33) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " ))
print(min(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:40:07) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " ))
print(min(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:41:06) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(x))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:41:47) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 01:42:14) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(x))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:16:05) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
print(max(X))
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:16:31) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
print(max(X))
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:16:39) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
print(max(X))
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:17:19) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
print(max(X))
-- OUTPUT:
0
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 13:17:21) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
print(max(X))
-- EXECUTION TIME:
0.195176
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
0
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:17:36) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(max(X))

-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:17:42) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(max(X))
-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:37:47) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:38:02) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:38:10) 
-- CODE:
X = (input(	"numero(s) inteiro(s): " ))
print(min(X))
-- ERROR:
File "XXXX", line 3
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 13:38:30) 
-- CODE:
X = int(input(	"numero(s) inteiro(s): " ))
print(min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(min(X))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:25:26) 
-- CODE:
print(min(1,0,4))
print(max(9,2,8))
mediana = (max-min)
print(max)
print(mediana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mediana = (max-min)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:25:52) 
-- CODE:
min(1,0,6)
max(9,2,8)
mediana = (max-min)
print(max)
print(mediana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mediana = (max-min)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:09) 
-- CODE:
min(1,0,6)
max(9,2,8)
mediana = (max)-(min)
print(max)
print(mediana)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    mediana = (max)-(min)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:33) 
-- CODE:
min(1,0,6)
max(9,2,8)
print(max)
-- OUTPUT:
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:35) 
-- CODE:
min(1,0,6)
max(9,2,8)
print(max)
-- OUTPUT:
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:36) 
-- CODE:
min(1,0,6)
max(9,2,8)
print(max)
-- OUTPUT:
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:26:37) 
-- CODE:
min(1,0,6)
max(9,2,8)
print(max)
-- OUTPUT:
<built-in function max>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:28:07) 
-- CODE:
a= int(input(max("numero(s) inteiro(s): ")))
print
-- OUTPUT:
u
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:28:13) 
-- CODE:
a= int(input(max("numero(s) inteiro(s): ")))
print
-- OUTPUT:
u
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:29:30) 
-- CODE:
a = int(input(("numero(s) inteiro(s): "))
print(a)
-- ERROR:
File "XXXX", line 2
    print(a)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:29:45) 
-- CODE:
a = int(input(("numero(s) inteiro(s): "))
print(int(a))
-- ERROR:
File "XXXX", line 2
    print(int(a))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:30:01) 
-- CODE:
X = int(input(("numero(s) inteiro(s): "))
print(int(X))
-- ERROR:
File "XXXX", line 2
    print(int(X))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:30:15) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(X)
-- OUTPUT:
numero(s) inteiro(s): 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:30:28) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
-- OUTPUT:
numero(s) inteiro(s): 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:32:45) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(min(X))
-- OUTPUT:
numero(s) inteiro(s): 1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:33:05) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(min(X))
-- OUTPUT:
numero(s) inteiro(s): 1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:34:09) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(max-min)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(max-min)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:34:23) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(int(max-min)
-- ERROR:
File "XXXX", line 4
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:36:35) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(max(X)-min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(max(X)-min(X))
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:39:51) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
print(max(X))
print(min(X))
-- OUTPUT:
numero(s) inteiro(s): 1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:43:00) 
-- CODE:
X = int(input(("numero(s) inteiro(s): ")))
print(max(X))
print(min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(max(X))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:43:20) 
-- CODE:
X = int(input(("numero(s) inteiro(s): ")))
print(max(X))
print(min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(max(X))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:48:27) 
-- CODE:
X = int(input(("numero(s) inteiro(s): ")))
maxval = (max(X))
minval = (min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    maxval = (max(X))
TypeError: 'int' object is not iterable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:48:47) 
-- CODE:
X = input(int("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    X = input(int("numero(s) inteiro(s): "))
ValueError: invalid literal for int() with base 10: 'numero(s) inteiro(s): '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:48:56) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
-- OUTPUT:
numero(s) inteiro(s):
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 14:49:13) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
-- EXECUTION TIME:
0.145623
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
numero(s) inteiro(s):
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:49:53) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print(maxval)
print(maxval-minval)
print(minval)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(maxval-minval)
TypeError: unsupported operand type(s) for -: 'str' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:50:28) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print(maxval)
print(str((maxval-minval))
print(minval)
-- ERROR:
File "XXXX", line 6
    print(minval)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:50:49) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print(maxval)
print(str((maxval-minval))
print(str(minval))
-- ERROR:
File "XXXX", line 6
    print(str(minval))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:52:32) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print(maxval)
print(str((maxval-minval))
print(int(minval))
-- ERROR:
File "XXXX", line 6
    print(int(minval))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:53:01) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print( maxval )
print(str(( maxval - minval ))
print(int( minval ))
-- ERROR:
File "XXXX", line 6
    print(int( minval ))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:53:11) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print( maxval )
print(str(( maxval - minval ))
print(str( minval ))
-- ERROR:
File "XXXX", line 6
    print(str( minval ))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:53:17) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print( maxval )
print(str(( maxval - minval ))

-- ERROR:
File "XXXX", line 6
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:53:25) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
maxval = (max(X))
minval = (min(X))
print( maxval )
print(str(( maxval - minval ))
-- ERROR:
File "XXXX", line 6
    
                                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 14:54:09) 
-- CODE:
X = input(("numero(s) inteiro(s): "))
xval = (max(X))
yval = (min(X))
print( maxval )
print((( xval - yval ))
-- ERROR:
File "XXXX", line 6
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:29:50) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(maxi)
print(media)
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:30:41) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(maxi)
print(media)
-- EXECUTION TIME:
0.146652
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:30:47) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(maxi)
print(media)
-- EXECUTION TIME:
0.193987
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:31:04) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(maxi)
print(media)
-- OUTPUT:
-2
10
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 15:31:42) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(media)
print(maxi)
-- OUTPUT:
-2
0
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 15:31:50) 
-- CODE:
a1 = int(input("valor de a: "))
b1 = int(input("valor de b: "))
c1 = int(input("valor de c: "))
mini = min(a1,b1,c1)
maxi = max(a1,b1,c1)
media = a1 + b1 + c1 - maxi - mini
print(mini)
print(media)
print(maxi)
-- EXECUTION TIME:
0.227693
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
